--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_spritesheet_animation"
-version = "0.2.0"
+version = "0.3.0"
 description = "A Bevy plugin for animating sprites"
 repository = "https://github.com/merwaaan/bevy_spritesheet_animation"
 readme="README.md"
@@ -14,7 +14,7 @@ exclude = [
 ]
 
 [dependencies]
-bevy = { version = "0.14.0", default-features = false, features = ["bevy_sprite"] }
+bevy = { version = "0.14.0", default-features = false, features = ["bevy_pbr", "bevy_sprite"] }
 itertools = "0.12.1"
 visibility = "0.1.0"
 
@@ -23,6 +23,9 @@ approx = "0.5.1"
 bevy = { version = "0.14.0", default-features = true }
 criterion = "0.5.1"
 rand = "0.8.5"
+
+[profile.test]
+inherits = "release"
 
 [features]
 # Enable this feature so that the tests/doctests get access to some private constructors.
