--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,4 @@ jobs:
         run: cargo doc --no-deps
 
       - name: Run tests
-        # Enable expose-internals-to-tests so that tests/doctests get access to some private constructors
-        run: cargo test --features expose-internals-to-tests
+        run: cargo test
