--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,11 @@ exclude = ["assets/example.gif", "assets/example3d.gif"]
 bevy = { version = "0.15.0", default-features = false, features = [
   "bevy_pbr",
   "bevy_sprite",
+  "bevy_ui",
 ] }
 # Temporary dep until the bevy_image export is fixed
 # https://github.com/bevyengine/bevy/issues/16563
-bevy_internal = { version = "0.15", features = [ "bevy_image" ]}
+bevy_internal = { version = "0.15", features = ["bevy_image"] }
 
 [dev-dependencies]
 approx = "0.5.1"
