--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,20 +12,18 @@ resolver = "2"
 exclude = ["assets/example.gif", "assets/example3d.gif"]
 
 [dependencies]
-bevy = { version = "0.15.0", default-features = false, features = [
+bevy = { version = "0.16.0-rc", default-features = false, features = [
   "bevy_pbr",
   "bevy_sprite",
   "bevy_ui",
 ] }
-# Temporary dep until the bevy_image export is fixed
-# https://github.com/bevyengine/bevy/issues/16563
-bevy_internal = { version = "0.15", features = ["bevy_image"] }
 
 [dev-dependencies]
 approx = "0.5.1"
-bevy = { version = "0.15.0", default-features = true }
+bevy = { version = "0.16.0-rc", default-features = true }
 clap = { version = "4.5.16", features = ["derive"] }
-iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", rev = "d8f3cbb2ec486b85a86b21e1aa32dcebd26ac884" }
+# TODO: Enable once it's updated to bevy 0.16.
+# iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", rev = "d8f3cbb2ec486b85a86b21e1aa32dcebd26ac884" }
 rand = "0.8.5"
 
 [profile.test]
