--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,7 @@ bevy = { version = "0.16.0-rc", default-features = false, features = [
 approx = "0.5.1"
 bevy = { version = "0.16.0-rc", default-features = true }
 clap = { version = "4.5.16", features = ["derive"] }
-# TODO: Enable once it's updated to bevy 0.16.
-# iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", rev = "d8f3cbb2ec486b85a86b21e1aa32dcebd26ac884" }
+iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", rev = "8e6dd6072c2e093b5353f62970e55304175dbe8f" }
 rand = "0.9"
 
 [profile.test]
