--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ resolver = "2"
 exclude = ["assets/example.gif", "assets/example3d.gif"]
 
 [dependencies]
-bevy = { version = "0.16.0-rc", default-features = false, features = [
+bevy = { version = "0.16.0", default-features = false, features = [
+  "bevy_log",
   "bevy_pbr",
   "bevy_sprite",
   "bevy_ui",
@@ -20,7 +21,7 @@ bevy = { version = "0.16.0-rc", default-features = false, features = [
 
 [dev-dependencies]
 approx = "0.5.1"
-bevy = { version = "0.16.0-rc", default-features = true }
+bevy = { version = "0.16.0", default-features = true }
 clap = { version = "4.5.16", features = ["derive"] }
 iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", rev = "8e6dd6072c2e093b5353f62970e55304175dbe8f" }
 rand = "0.9"
