--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,10 @@ bevy = { version = "0.16.0", default-features = false, features = [
 
 [dev-dependencies]
 approx = "0.5.1"
-bevy = { version = "0.16.0", default-features = true }
+bevy = { version = "0.16.0", default-features = true, features = [
+  "bevy_dev_tools"
+] }
 clap = { version = "4.5.16", features = ["derive"] }
-iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", rev = "8e6dd6072c2e093b5353f62970e55304175dbe8f" }
 rand = "0.9"
 
 [lints.clippy]
