--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_spritesheet_animation"
-version = "4.0.0"
+version = "4.0.1"
 description = "A Bevy plugin for animating sprites"
 repository = "https://github.com/merwaaan/bevy_spritesheet_animation"
 readme = "README.md"
@@ -41,3 +41,7 @@ rand = "0.9"
 # Bevy systems can have a lot of arguments
 too_many_arguments = "allow"
 type_complexity = "allow"
+
+# Like for our CI, docs.rs won't be able to build the documentation with the "custom_cursor" feature enabled
+[package.metadata.docs.rs]
+no-default-features = true
